--- a/file/pom.xml
+++ b/file/pom.xml
@@ -21,6 +21,16 @@
         </dependency>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
@@ -44,6 +54,10 @@
         <dependency>
             <groupId>com.aventrix.jnanoid</groupId>
             <artifactId>jnanoid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xust</groupId>
+            <artifactId>entity</artifactId>
         </dependency>
     </dependencies>
 </project>
