--- a/file/src/main/resources/application.yml
+++ b/file/src/main/resources/application.yml
@@ -7,7 +7,18 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.36.33:8848
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.36.33:3306/shop?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+mybatis-plus:
+  type-aliases-package: com.xust.entity
+logging:
+  level:
+    com.xust.mapper: debug
 minio:
   url: http://192.168.36.33:9000
   username: admin
   password: 123456789
+
